@@ -37,7 +37,7 @@ G_BEGIN_DECLS
 
 typedef enum
 {
-	ANJUTA_PLUGIN_MANAGER_ERROR_INVALID_TYPE,
+	ANJUTA_PLUGIN_MANAGER_MISSING_FACTORY,
 	ANJUTA_PLUGIN_MANAGER_ERROR_UNKNOWN
 } AnjutaPluginManagerError;
 
